--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>one.xingyi</groupId>
   <artifactId>pdftemplate</artifactId>
   <packaging>jar</packaging>
-  <version>1.1.3</version>
+  <version>1.1.5</version>
   <url>https://github.com/phil-rice/pdftemplate</url>
   <name>Pdf Template</name>
   <description>Tools for adding text and images to pdfs</description>
@@ -105,8 +105,14 @@
     </plugins>
 
   </build>
-  <dependencies><!-- https://mvnrepository.com/artifact/log4j/log4j -->
-
+  <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
+    <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+      <version>1.5.4</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/log4j/log4j -->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
