--- a/src/test/resources/graphconfig.properties
+++ b/src/test/resources/graphconfig.properties
@@ -1,6 +1,7 @@
 one.xAxis=The xaxis for one
 one.yAxis=The yaxis for one
-one.title = The title for one
+one.title=The title for one
 one.text1=Avg
 one.text2=Last
+one.color=0x00ffff
 
